[package]
name = "corrosion"
version = "0.1.0"
edition = "2021"

[lib]
name = "cvm"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["cargo"] }
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.48"
